<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MoviesDetail">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="643dp"
        android:layout_gravity="start|top"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/the_mandalorian" />

    <ImageButton
        android:id="@+id/arrow_back_button"
        style="@style/MovieDetailButtonSize"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        tools:src="@drawable/arrow_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_ageCategory"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="12+"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="The Mandalorian"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_rating_star1"
                style="@style/StarIconSize"
                android:importantForAccessibility="no"
                android:src="@drawable/star_icon"
                app:tint="@color/toolbarIconColor" />

            <ImageView
                android:id="@+id/movie_rating_star2"
                style="@style/StarIconSize"
                android:importantForAccessibility="no"
                android:src="@drawable/star_icon"
                app:tint="@color/toolbarIconColor" />

            <ImageView
                android:id="@+id/movie_rating_star3"
                style="@style/StarIconSize"
                android:importantForAccessibility="no"
                android:src="@drawable/star_icon"
                app:tint="@color/toolbarIconColor" />

            <ImageView
                android:id="@+id/movie_rating_star4"
                style="@style/StarIconSize"
                android:importantForAccessibility="no"
                app:tint="@color/toolbarIconColor"
                app:srcCompat="@drawable/star_icon" />

            <ImageView
                android:id="@+id/movie_rating_star5"
                style="@style/StarIconSize"
                android:importantForAccessibility="no"
                android:src="@drawable/star_icon" />

        </LinearLayout>

        <TextView
            android:id="@+id/movie_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="2020  |  Action, Adventure, Fantasy"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/StoryLineStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storyline"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                style="@style/StoryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/story_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/actors_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/cast_and_crew"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:orientation="horizontal"
                android:background="@color/black"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="30"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/pedro_pascal_photo"
                        style="@style/ActorPhotoStyle"
                        android:src="@drawable/pedro_pascal"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:id="@+id/pedro_pascal_name"
                        style="@style/ActorNameStyle"
                        android:text="@string/pedro_pascal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="30"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/carl_weathers_photo"
                        style="@style/ActorPhotoStyle"
                        android:src="@drawable/carl_weathers"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/ActorNameStyle"
                        android:text="@string/carl_weathers" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="30"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/gina_carano_photo"
                        style="@style/ActorPhotoStyle"
                        android:src="@drawable/gina_carano"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:id="@+id/gina_carano_name"
                        style="@style/ActorNameStyle"
                        android:text="@string/gina_carano" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>


